# tomtom-traffic-sdk

./: .gitignore  LICENSE  NOTICE  README.md  package.json  pyproject.toml
LICENSES/: CC-BY-SA-4.0.txt
docs/: README.md  tomtom-traffic-api.md
scripts/: discover-traffic-api-spec.mjs  generate_traffic_api_docs.py
src/tomtom_traffic_sdk/: __init__.py  client.py  exceptions.py  utils.py
tests/: test_client_maps.py  test_client_orbis.py  test_docs_endpoint_coverage.py  test_e2e_http_server.py  test_utils.py
