[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tomtom-traffic-sdk"
version = "0.1.0"
description = "Python SDK for TomTom Traffic API (TomTom Maps + TomTom Orbis Maps)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TomTom Traffic SDK" }]
dependencies = [
  "httpx>=0.27.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "respx>=0.21.1",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tomtom_traffic_sdk"]

[tool.pytest.ini_options]
addopts = "-q --cov=tomtom_traffic_sdk --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["tomtom_traffic_sdk"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
